--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>Brian's</h1>
 							<p>Official Cydia Repo</p>
-						</header>
+						</header>
+
 						<footer>
 							<ul class="icons">
-								<li><a href="cydia://url/https://cydia.saurik.com/api/share#?source=https%3A%2F%2FBriansRepo.github.io" class="fa-plus">Add Repo</a></li>
+								<li><a href="cydia://url/https://cydia.saurik.com/api/share#?source=https%3A%2F%2FBrianLeek.github.io" class="fa-plus">Add Repo</a></li>
 							</ul>
 						</footer>
 					</section>
